CHANGES.txt - 01/29/2006
------------------------

CHANGES IN CUPS V1.2.0b1

	- Added support for launchd on MacOS X.
	- Added support for notify_post on MacOS X.
	- Added support for DBUS on Linux.
	- All of the Berkeley (except for lpc) and System V
	  commands now support specification of user, host, and
	  port (STR #1028, STR #1029, STR #1087)
	- The lpmove command now allows you to move all jobs for
	  a given queue (STR #56)
	- The web interface now supports moving of a job or jobs
	  to another queue (STR #56)
	- The web interface now provides searching, paging, and
	  changing of the sort/display order of classes, jobs,
	  and printers.
	- cupsaddsmb now accepts a password on the command-line
	  and supports passwords with special characters (STR
	  #822, STR #1236)
	- ppdLoad*() no longer tries to "fix" bad characters in
	  UI text (STR #1101)
	- Printer names can now (reliably) contain Unicode
	  characters (STR #896)
	- The lpstat command now shows the time and date of the
	  last printer state change instead of the hardcoded "Jan
	  01 00:00" (STR #659)
	- The scheduler now adds a job-actual-printer-uri
	  attribute to job objects when printing to a class (STR
	  #116)
	- The scheduler now logs log file open errors to the
	  system log (STR #1289)
	- The scheduler now sets the job-originating-user-name to
	  the authenticated username, if available (STR #1318)
	- The scheduler now only updates the permissions of SSL
	  keys and certificates when they are under the
	  ServerRoot directory (STR #1324)
	- The rastertodymo driver has been renamed to
	  rastertolabel (a symlink is installed so that existing
	  queues continue to work) and now also supports Zebra's
	  CPCL language.
	- The lpstat command could show the wrong active job for
	  a printer (STR #1301)
	- Fixed a potential crash problem in the scheduler when
	  aborting a CGI program (STR #1290)
	- Added a "cancel all jobs" button to the class and
	  printer web interfaces (STR #1140)